some fixes and some new features
